# hs-clbg

./: README.md
bintrees/v8/: Makefile  main.hs
fann/v3/: main.hs
fann/v4/: main.hs
knu/: knu-240000.txt
knu/v1/: Makefile
knu/v2/: Makefile  knu.cabal  main.hs
mand-simple/: Makefile  cabal.project  main.hs  mand-simple.cabal
mand/v2/: main.hs.2
mand/v3/: Makefile  main.hs
nbody/: main.cc
revcomp/v3/: main
revcomp/v4/: Makefile
